# DM885_Project_DevSecOps

./: .gitignore  PROJECT_TASKS.md  README.MD  README.md  USER_STORIES.md  index.js  package.json  pv-volume.yaml  test.js
.github/: terraform-development-validate.yaml
.github/workflows/: auth-build-image.yaml  auth-deploy-gke.yaml  auth-deploy.yaml  auth-testing.yaml  frontend-deploy.yaml  frontend-service-build.yaml  frontend-testing.yaml  node.js.yml  solvers-deploy.yaml  (+6 more)
artifact/: project_setup.md
artifacts/: Userstories  Userstories.md
const assert = require('assert'); const index = require('./: test.js
docs/: get-started.MD  monitoring.MD  rabbit-mq-helm.MD
frontend/: package.json
report/: biblo.bib  main.tex  template.tex
services/: README.md  skaffold.yaml
services/auth/: Cargo.toml  Dockerfile  README.MD  recipe.json  skaffold.yaml
services/auth/helm/: Chart.yaml  values.yaml
services/auth/helm/templates/: _helpers.tpl  routes.yml  secrets.yml  service-account.yml  service.yml
services/auth/migrations/: 20221127120446_create-tables.sql  20221219102844_create_users.up.sql
services/auth/src/: main.rs
services/auth/src/config/: mod.rs  secret.rs
services/auth/src/db/: user.rs
services/auth/src/error/: mod.rs
services/auth/src/handlers/: auth.rs  mod.rs  user.rs
services/auth/src/models/: user.rs
terraform/: elk-elastic.yaml  elk-kibana.yaml  elk-logstash.yaml  main.tf
terraform_gke/: README.md  gke.tf  terraform.tfvars  vpc.tf
terraform_gke_resources/: README.md  gke.tf  terraform.tfvars  versions.tf
test/: test.ts
(+147 files in other folders)
